# python-fsa

./: README.md  main.py  pyproject.toml  requirements.txt
assets/dot_files/: dfa_example.gv  nfa_example.gv  nfa_to_dfa.gv
docs/source/: api.rst  conf.py  dotfiles.rst  examples.rst  index.rst  quickstart.rst
docs/source/_autosummary/: python_fsa.dfa.rst  python_fsa.graph.rst  python_fsa.nfa.rst  python_fsa.rst
examples/dfa/: ex1.py  ex2.py  ex3.py
examples/nfa/: ex1.py  ex2.py  ex3.py
src/: dfa.py  nfa.py
src/examples/dfa/: ex1.py  ex2.py  ex3.py
src/examples/nfa/: ex1.py  ex2.py  ex3.py
src/python_fsa/: __init__.py  dfa.py  graph.py  nfa.py
src/python_fsa/_utils/: dot_parsing.py  dot_writing.py  epsilon.py
src/python_fsa/utils/: dot_parsing.py
