[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fsa"
version = "0.0.4"
description = "Finite State Automata utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC0"}
dynamic = ["optional-dependencies"]

[tool.setuptools.dynamic]
optional-dependencies.graphviz = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
